# rust-actix-sqlx-demo

./: Cargo.toml  LICENSE
migrations/: 20221209222422_init_users.up.sql  20221209222928_init_posts.up.sql
src/: handlers.rs  main.rs  models.rs
