[package]
name = "sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
chrono = { version = "0.4.23", features = [ "serde" ] }
dotenv = "0.15.0"
serde = { version = "1.0.150", features = [ "derive" ] }
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = [ "runtime-async-std-native-tls", "postgres", "chrono", "time", "uuid"] }
uuid = { version = "1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
